--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
       <form id="hero-form">
         <fieldset>
           <legend>Dados do herói</legend>
-          <label for="hero">Nome:</label>
-          <input
-            required
-            type="text"
-            pattern="^[a-zA-Z][a-zA-Z0-9]{1,15}$"
-            name="hero"
-            id="hero"
-          />
-          <label for="xp">Pontos de experiência:</label>
-          <input required type="number" name="xp" id="xp" value="1" min="1" />
+
+          <label for="hero"
+            >Nome:
+            <input
+              required
+              type="text"
+              pattern="^[a-zA-Z][a-zA-Z0-9]{1,15}$"
+              name="hero"
+              id="hero"
+            />
+          </label>
+
+          <label for="xp"
+            >Pontos de experiência:<input
+              required
+              type="number"
+              name="xp"
+              id="xp"
+              value="1"
+              min="1"
+          /></label>
         </fieldset>
         <button type="submit">Classificar</button>
       </form>
