Style: improve styling, center main elements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Macondo&display=swap"
       rel="stylesheet"
     />
     <link
@@ -31,6 +31,7 @@
               pattern="^[a-zA-Z][a-zA-Z0-9]{1,15}$"
               name="hero"
               id="hero"
+              value="HoneyBadger"
             />
           </label>
 
