--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <legend>Dados do herói</legend>
 
           <label for="hero"
-            >Nome:
+            >Nome
             <input
               required
               type="text"
@@ -36,7 +36,7 @@
           </label>
 
           <label for="xp"
-            >Pontos de experiência:<input
+            >Pontos de experiência<input
               required
               type="number"
               name="xp"
