Feat: Implement audio transitions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
     <title>Classificador de Nível de Herói</title>
   </head>
   <body>
+    <audio
+      id="shield-block"
+      preload="auto"
+      src="/assets/audio/compressed/shield-block-shortsword-143940.mp3"
+    ></audio>
+
+    <audio
+      id="sword-impact"
+      preload="auto"
+      src="/assets/audio/compressed/sword-slash-with-metallic-impact-185435.mp3"
+    ></audio>
+
+    <audio
+      id="sword-clash"
+      preload="auto"
+      src="/assets/audio/compressed/sword-clash-241729.mp3"
+    ></audio>
+
+    <audio
+      id="sword-slash"
+      preload="auto"
+      src="/assets/audio/compressed/sword-slash-03-266314.mp3"
+    ></audio>
+
     <main>
       <h1>Classificador de Nível de Herói</h1>
       <form id="hero-form">
