--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               min="1"
           /></label>
         </fieldset>
-        <button type="submit">Classificar</button>
+        <button class="main-btn" type="submit">Classificar</button>
       </form>
       <div id="modal"></div>
     </main>
