--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@
               min="1"
           /></label>
         </fieldset>
-        <button class="main-btn" type="submit">Classificar</button>
+        <button class="main-btn" type="submit">
+          <img
+            src="/assets/images/ChatGPT Image Apr 11, 2025, 07_51_01 PM.png"
+            alt=""
+            aria-hidden="true"
+          />
+          <span>Classificar</span>
+        </button>
       </form>
       <div id="modal"></div>
     </main>
