Render modal content with HTML, not JS

--- a/index.html
+++ b/index.html
@@ -77,7 +77,26 @@
           <span>Classificar</span>
         </button>
       </form>
-      <div id="modal"></div>
+      <div id="modal">
+        <div id="modal-content">
+          <div class="centered-content">
+            <p>
+              O herói de nome
+              <strong id="display-text-hero" class="display-text"></strong>
+              está no nível
+              <strong id="display-text-lvl" class="display-text"></strong>
+            </p>
+            <button id="close-modal-btn" aria-label="Close modal">
+              <img
+                src="/assets/images/ChatGPT Image Apr 11, 2025, 09_05_08 PM.png"
+                alt=""
+                aria-hidden="true"
+              />
+              <span>🗙</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script src="script.js"></script>
