Fix: Change the text content of the close modal button to "OK"

--- a/index.html
+++ b/index.html
@@ -86,13 +86,17 @@
               está no nível
               <strong id="display-text-lvl" class="display-text"></strong>
             </p>
-            <button id="close-modal-btn" aria-label="Close modal">
+            <button
+              type="button"
+              id="close-modal-btn"
+              aria-label="Fechar modal"
+            >
               <img
                 src="/assets/images/ChatGPT Image Apr 11, 2025, 09_05_08 PM.png"
                 alt=""
                 aria-hidden="true"
               />
-              <span>🗙</span>
+              <span>OK</span>
             </button>
           </div>
         </div>
