Add class shadowed-btn

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               min="1"
           /></label>
         </fieldset>
-        <button class="main-btn" type="submit">
+        <button class="main-btn shadowed-btn" type="submit">
           <img
             src="/assets/images/ChatGPT Image Apr 11, 2025, 07_51_01 PM.png"
             alt=""
@@ -89,6 +89,7 @@
             <button
               type="button"
               id="close-modal-btn"
+              class="shadowed-btn"
               aria-label="Fechar modal"
             >
               <img
