Add sound and visual cues when form inputs are valid

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   </head>
   <body>
     <audio
+      id="blade-draw"
+      preload="auto"
+      src="/assets/audio/compressed/blade_draw-99885.mp3"
+    ></audio>
+
+    <audio
       id="shield-block"
       preload="auto"
       src="/assets/audio/compressed/shield-block-shortsword-143940.mp3"
@@ -68,7 +74,7 @@
               min="1"
           /></label>
         </fieldset>
-        <button class="main-btn shadowed-btn" type="submit">
+        <button id="main-btn" class="shadowed-btn" type="submit">
           <img
             src="/assets/images/ChatGPT Image Apr 11, 2025, 07_51_01 PM.png"
             alt=""
