refactor: add animations to modal and display-text-lvl

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
         </button>
       </form>
       <div id="modal">
+        <div class="modal-backdrop"></div>
         <div id="modal-content">
-          <div class="centered-content">
+          <div>
             <p>
               O herói de nome
               <strong id="display-text-hero" class="display-text"></strong>
